feat(websocket): 实现完整的 WebSocket 客户端连接管理
- 新增 WebSocket 模块，包含连接管理、状态管理、错误处理和单元测试
- 实现自动重连、会话恢复、心跳机制和抖动退避算法
- 扩展事件模型，支持 READY、RESUME、RECONNECT 等新操作码
- 更新配置以支持默认环境变量和随机数生成依赖
- 重构服务器事件分发逻辑以处理可选事件数据

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,9 +23,11 @@ tracing-subscriber = "0.3.22"
 dotenv = "0.15.0"
 thiserror = "2.0.18"
 async-trait = "0.1.89"
+rand = "0.9.2"
 
 [dev-dependencies]
 anyhow = "1.0.100"
+tokio = { version = "1.49.0", features = ["test-util"] }
 
 [profile.dev]
 opt-level = 1
