--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ strum = { version = "0.27.2", features = ["derive"] }
 tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
 tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
 tracing = "0.1.44"
-tracing-subscriber = "0.3.22"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 dotenv = "0.15.0"
 thiserror = "2.0.18"
 async-trait = "0.1.89"
