feat: 添加基于ReAct代理的AI聊天机器人示例
- 将langchain相关依赖从主依赖移至dev-dependencies，仅用于示例
- 新增examples/agent_bot.rs展示如何使用ReAct代理处理QQ群聊和私聊消息
- 更新README.md反映项目结构变化（移除main.rs说明）
- 在VSCode设置中添加"deepseek"到拼写检查词典

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Addrs",
         "dalek",
+        "deepseek",
         "dotenv",
         "repr",
         "reqwest",
