feat(websocket): 支持会话状态管理和自动重新鉴权
- 添加 langgraph 依赖以支持检查点机制
- 为 WebSocket 管理器添加会话状态清理功能
- 新增 InvalidSession 错误类型用于处理无效会话
- 修改 WebSocket 启动逻辑以接收 QQClient 实例而非静态 Token
- 当收到 InvalidSession 时自动重新鉴权并更新 Token
- 在示例中为 ReactAgent 添加检查点支持以保持会话状态

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ rand = "0.9.2"
 anyhow = "1.0.100"
 langchain = { path = "../langchain-rs/crates/langchain" }
 langchain_core = { path = "../langchain-rs/crates/langchain_core" }
+langgraph = { path = "../langchain-rs/crates/langgraph" }
 langchain_openai = { path = "../langchain-rs/crates/langchain_openai" }
 tokio = { version = "1.49.0", features = ["test-util"] }
 
