style: 将 QQEvent trait 中的方法改为默认实现
将 on_group_at_message_create 方法改为默认实现，以简化 trait 的实现。
同时更新了 .vscode/settings.json 中的 cSpell.words 配置。

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "dalek",
         "deepseek",
         "dotenv",
+        "langgraph",
         "repr",
         "reqwest",
         "serde",
